--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,18 +1,241 @@
 <!DOCTYPE html>
-<html lang="en">
+{% load static %}
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Primeiro Template</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/9d40ba4b44.js" crossorigin="anonymous"></script>
+    <title>Página Inicial</title>
 </head>
 <body>
-    <h1>Lista de posts cadastrados</h1>
 
-    <ul>
-        {% for post in posts %}
-        <a href="{% url 'detalhe_post' post.id %}">{{post.titulo}} - {{post.autor}}</a>
-        <br>
-        {% endfor %}
-    </ul>
 
+<div class="container-fluid bg-dark mb-2">
+    <div class="row justify-content-center ">
+        <div class="col-8">
+            <header class="bg-dark my-2">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+                    <div class="container-fluid">
+
+                        <a class="navbar-brand" href="#">Academia Python</a>
+
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="#">Blog</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Cursos</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link">Contato</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link">Login</a>
+                                </li>
+
+                            </ul>
+
+                            <form class="d-flex" role="search">
+                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                                <button class="btn btn-outline-success" type="submit">Search</button>
+                            </form>
+
+                        </div>
+                    </div>
+                </nav>
+
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <svg class="bd-placeholder-img"
+                                 width="100%"
+                                 height="100%"
+                                 xmlns="http://www.w3.org/2000/svg"
+                                 aria-hidden="true"
+                                 preserveAspectRatio="xMidYMid slice"
+                                 focusable="false">
+
+                                <rect width="100%" height="100%" fill="#3A3276"/>
+                            </svg>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Entre em contato para receber descontos especiais</h5>
+                                <p>Faça parte do nosso grupo do Telegram para tirar dúvidas conosco,
+                                receber cupons de desconto e muito mais.</p>
+                            </div>
+
+                        </div>
+
+                        <div class="carousel-item">
+                            <svg class="bd-placeholder-img"
+                                 width="100%"
+                                 height="100%"
+                                 xmlns="http://www.w3.org/2000/svg"
+                                 aria-hidden="true"
+                                 preserveAspectRatio="xMidYMid slice"
+                                 focusable="false">
+
+                                <rect width="100%" height="100%" fill="#008000"/>
+                            </svg>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Siga-nos nas redes sociais</h5>
+                                <p>Conheça nosso canal do Youtube e receba dicas, tutoriais gratuitos e fique
+                                por dentro das novidades do mundo geek.</p>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <svg class="bd-placeholder-img"
+                                 width="100%"
+                                 height="100%"
+                                 xmlns="http://www.w3.org/2000/svg"
+                                 aria-hidden="true"
+                                 preserveAspectRatio="xMidYMid slice"
+                                 focusable="false">
+
+                                <rect width="100%" height="100%" fill="#c1c115"/>
+                            </svg>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Conheça os cursos da Academia Python</h5>
+                                <p>Aprenda a construir sites responsivos com Python, Django e Bootstrap</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <button class="carousel-control-prev" type="button"
+                            data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+
+                    <button class="carousel-control-next" type="button"
+                            data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+
+                </div>
+
+            </header>
+        </div>
+    </div>
+</div>
+
+<main class="bg-light">
+    <div class="container-fluid ">
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <div class="row">
+
+                    <div class="col-8 d-flex">
+                        <div class="card vh-75 vw-100">
+                            <img src="{% static 'blog/django.jpg' %}" class="card-img-top" alt="Imagem do Card">
+
+                            <div class="card-body">
+                                <h5 class="card-title">Título do Post</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus
+                                    aliquid autem blanditiis cupiditate distinctio doloremque eos et illo ipsam iste,
+                                    nam odio officia quisquam reprehenderit saepe, sequi sint vero voluptates!</p>
+
+                                <p class="card-text">
+                                    <small class="text-muted"> Publicado em 21/12/2012 </small>
+                                </p>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-4 d-flex">
+
+                        <div class="card vh-75 vw-100">
+
+                            <img src="{% static 'blog/Eygon.jpg' %}" class="card-img-top" alt="Eygon">
+
+                            <div class="card-body">
+
+                                <div class="form-check">
+
+                                    <ul class="list-group list-group-flush">
+                                        {% for i in 'ABCDE' %}
+                                        <div class="list-group-item">
+                                            <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                                   id="flexRadioDefault1">
+
+                                            <label class="form-check-label" for="flexRadioDefault1">
+                                                Alternativa {{i}}
+                                            </label>
+                                        </div>
+                                        {% endfor %}
+                                    </ul>
+
+                                    <a href="#" class="mt-2 d-grid btn btn-success">Responder</a>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+<footer class="bg-dark py-4 my-2">
+    <div class="container-fluid text-white">
+        <div class="row justify-content-center">
+
+            <div class="col-2 text-left">
+                <h5 class="text-uppercase fw-bold text-info"> Quem somos?</h5>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </p>
+            </div>
+
+            <div class="col-4 text-left">
+                <h5 class="text-uppercase fw-bold text-info"> Onde queremos chegar?</h5>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, minus, numquam. Architecto atque
+                    deserunt doloremque dolorum eius, iure labore molestias mollitia nam nihil provident rem veritatis.
+                    Culpa ipsa omnis reprehenderit.
+                </p>
+            </div>
+
+            <div class="col-2">
+                <h5 class="text-uppercase fw-bold text-info"> Siga-nos nas redes</h5>
+                <p>
+                    <i class="fa-brands fa-youtube"></i>
+                    <a href="#" class="text-white" style="text-decoration:none;">Youtube</a>
+                </p>
+                <p>
+                    <i class="fa-brands fa-github"></i>
+                    <a href="#" class="text-white" style="text-decoration:none;">Github</a>
+                </p>
+            </div>
+
+        </div>
+    </div>
+</footer>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
