--- a/blog/templates/blog/post_detalhes.html
+++ b/blog/templates/blog/post_detalhes.html
@@ -2,15 +2,42 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Post Detalhe</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Página Inicial</title>
 </head>
 <body>
-    <h1>{{ post.titulo }}</h1>
-    <h3>{{post.subtitulo }} - {{post.autor }}</h3>
 
-    <p>
-        {{post.conteudo}}
-    </p>
+    <header class="bg-dark my-2">
+        <div class="container-fluid ">
+            <div class="row">
+                <div class="col-8">
+                    NAVBAR
+                </div>
+            </div>
+        </div>
+    </header>
 
+    <main class="bg-light">
+        <div class="container-fluid ">
+            <div class="row">
+                <div class="col-8">
+                    CONTEUDO
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="bg-dark">
+        <div class="container-fluid ">
+            <div class="row">
+                <div class="col">
+                    FOOTER
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
