--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -3,9 +3,17 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
     <script src="https://kit.fontawesome.com/9d40ba4b44.js" crossorigin="anonymous"></script>
+    <script>
+        window.addEventListener('load', function(){
+          const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
+          const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
+        })
+    </script>
     <title>Página Inicial</title>
 </head>
 <body>
@@ -13,122 +21,12 @@
 
 <div class="container-fluid bg-dark mb-2">
     <div class="row justify-content-center ">
-        <div class="col-8">
+        <div class="col-xl-8">
             <header class="bg-dark my-2">
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-                    <div class="container-fluid">
+                {% include 'fragments/navbar.html' %}
 
-                        <a class="navbar-brand" href="#">Academia Python</a>
-
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                                aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-                                <li class="nav-item">
-                                    <a class="nav-link" aria-current="page" href="#">Blog</a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Cursos</a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link">Contato</a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link">Login</a>
-                                </li>
-
-                            </ul>
-
-                            <form class="d-flex" role="search">
-                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                                <button class="btn btn-outline-success" type="submit">Search</button>
-                            </form>
-
-                        </div>
-                    </div>
-                </nav>
-
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <svg class="bd-placeholder-img"
-                                 width="100%"
-                                 height="100%"
-                                 xmlns="http://www.w3.org/2000/svg"
-                                 aria-hidden="true"
-                                 preserveAspectRatio="xMidYMid slice"
-                                 focusable="false">
-
-                                <rect width="100%" height="100%" fill="#3A3276"/>
-                            </svg>
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Entre em contato para receber descontos especiais</h5>
-                                <p>Faça parte do nosso grupo do Telegram para tirar dúvidas conosco,
-                                receber cupons de desconto e muito mais.</p>
-                            </div>
-
-                        </div>
-
-                        <div class="carousel-item">
-                            <svg class="bd-placeholder-img"
-                                 width="100%"
-                                 height="100%"
-                                 xmlns="http://www.w3.org/2000/svg"
-                                 aria-hidden="true"
-                                 preserveAspectRatio="xMidYMid slice"
-                                 focusable="false">
-
-                                <rect width="100%" height="100%" fill="#008000"/>
-                            </svg>
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Siga-nos nas redes sociais</h5>
-                                <p>Conheça nosso canal do Youtube e receba dicas, tutoriais gratuitos e fique
-                                por dentro das novidades do mundo geek.</p>
-                            </div>
-                        </div>
-
-                        <div class="carousel-item">
-                            <svg class="bd-placeholder-img"
-                                 width="100%"
-                                 height="100%"
-                                 xmlns="http://www.w3.org/2000/svg"
-                                 aria-hidden="true"
-                                 preserveAspectRatio="xMidYMid slice"
-                                 focusable="false">
-
-                                <rect width="100%" height="100%" fill="#c1c115"/>
-                            </svg>
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Conheça os cursos da Academia Python</h5>
-                                <p>Aprenda a construir sites responsivos com Python, Django e Bootstrap</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <button class="carousel-control-prev" type="button"
-                            data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-
-                    <button class="carousel-control-next" type="button"
-                            data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-
-                </div>
+                {% include 'fragments/carousel.html' %}
 
             </header>
         </div>
@@ -136,32 +34,49 @@
 </div>
 
 <main class="bg-light">
-    <div class="container-fluid ">
+    <div class="container-fluid">
         <div class="row justify-content-center">
-            <div class="col-8">
+            <div class="col-xl-8">
+
                 <div class="row">
-
-                    <div class="col-8 d-flex">
+                    <div class="col-lg-8 d-flex">
                         <div class="card vh-75 vw-100">
-                            <img src="{% static 'blog/django.jpg' %}" class="card-img-top" alt="Imagem do Card">
+                            <a href="{% url 'detalhe_post' posts.0.id %}" ><img src="{{ posts.0.imagem_capa.url }}"
+                                                                               class="card-img-top"
+                                                                               alt="Imagem do Card"></a>
 
-                            <div class="card-body">
-                                <h5 class="card-title">Título do Post</h5>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus
-                                    aliquid autem blanditiis cupiditate distinctio doloremque eos et illo ipsam iste,
-                                    nam odio officia quisquam reprehenderit saepe, sequi sint vero voluptates!</p>
+                            <div class="card-body pb-4">
+                                <a href="{% url 'detalhe_post' posts.0.id %}" class="text-decoration-none text-dark">
+                                    <h4 class="card-title">{{ posts.0.titulo }}</h4>
+                                </a>
+                                <p class="card-text">{{ posts.0.resumo|safe }}</p>
 
-                                <p class="card-text">
-                                    <small class="text-muted"> Publicado em 21/12/2012 </small>
+                                <p class="card-text text-end">
+                                    <small class="text-muted"> Publicado em {{ posts.0.data_publicacao }} </small>
                                 </p>
+
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="d-flex justify-content-center">
+                                            <div class="span me-3 btn">
+                                                <i class="fa-solid fa-heart"></i> Curtir
+                                            </div>
+                                            <div class="span me-3 btn">
+                                                <i class="fa-solid fa-comment"></i> Comentar
+                                            </div>
+                                            <div class="span me-3 btn">
+                                                <i class="fa-solid fa-share"></i> Compartilhar
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
 
                             </div>
 
                         </div>
-
                     </div>
 
-                    <div class="col-4 d-flex">
+                    <div class="col-lg-4 d-none d-lg-flex">
 
                         <div class="card vh-75 vw-100">
 
@@ -190,48 +105,60 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <hr class="my-4">
+
+                <div class="container bg-dark py-3 d-flex justify-content-center rounded">
+                    <span>
+                        <h1 class="text-info">Posts recentes</h1>
+                    </span>
+                </div>
+
+                <hr class="my-4">
+                <div class="row row-cols-1 row-cols-md-2 g-4">
+                    {% for post in posts|slice:"1:5" %}
+                    <div class="col d-flex">
+                        <div class="card vh-75 vw-100">
+                            <a href="{% url 'detalhe_post' post.id %}"><img src="{{ post.imagem_capa.url }}"
+                                                                            class="card-img-top img-350"
+                                                                            alt="Imagem de Capa"></a>
+                            <div class="card-body pb-3">
+
+                                <a href="{% url 'detalhe_post' post.id %}" class="text-decoration-none text-dark"><h5 class="card-title">{{ post.titulo }}</h5>
+                                </a>
+
+                                <p class="card-text">{{ post.resumo|slice:":250"|safe }}...</p>
+
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="d-flex justify-content-center">
+                                            <div class="span me-3 btn">
+                                                <i class="fa-solid fa-heart"></i> Curtir
+                                            </div>
+                                            <div class="span me-3 btn">
+                                                <i class="fa-solid fa-comment"></i> Comentar
+                                            </div>
+                                            <div class="span me-3 btn">
+                                                <i class="fa-solid fa-share"></i> Compartilhar
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
 
                 </div>
+
             </div>
         </div>
     </div>
 </main>
 
-<footer class="bg-dark py-4 my-2">
-    <div class="container-fluid text-white">
-        <div class="row justify-content-center">
-
-            <div class="col-2 text-left">
-                <h5 class="text-uppercase fw-bold text-info"> Quem somos?</h5>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                </p>
-            </div>
-
-            <div class="col-4 text-left">
-                <h5 class="text-uppercase fw-bold text-info"> Onde queremos chegar?</h5>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, minus, numquam. Architecto atque
-                    deserunt doloremque dolorum eius, iure labore molestias mollitia nam nihil provident rem veritatis.
-                    Culpa ipsa omnis reprehenderit.
-                </p>
-            </div>
-
-            <div class="col-2">
-                <h5 class="text-uppercase fw-bold text-info"> Siga-nos nas redes</h5>
-                <p>
-                    <i class="fa-brands fa-youtube"></i>
-                    <a href="#" class="text-white" style="text-decoration:none;">Youtube</a>
-                </p>
-                <p>
-                    <i class="fa-brands fa-github"></i>
-                    <a href="#" class="text-white" style="text-decoration:none;">Github</a>
-                </p>
-            </div>
-
-        </div>
-    </div>
-</footer>
+{% include 'fragments/footer.html' %}
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
