--- a/blog/templates/blog/post_detalhes.html
+++ b/blog/templates/blog/post_detalhes.html
@@ -1,43 +1,160 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Página Inicial</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
+    <script src="https://kit.fontawesome.com/9d40ba4b44.js" crossorigin="anonymous"></script>
+    <script>
+        window.addEventListener('load', function(){
+          const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
+          const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
+        })
+    </script>
+    <title>Blog - Academia Python</title>
 </head>
+
 <body>
 
-    <header class="bg-dark my-2">
-        <div class="container-fluid ">
-            <div class="row">
-                <div class="col-8">
-                    NAVBAR
+<div class="container-fluid bg-dark mb-2">
+    <div class="row justify-content-center ">
+        <div class="col-xl-8">
+            <header class="bg-dark my-2">
+
+                {% include 'fragments/navbar.html' %}
+
+            </header>
+        </div>
+    </div>
+</div>
+
+<main class="bg-light">
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-xl-8 border-start border-end">
+
+                <hr class="my-5">
+
+                <div class="container-fluid">
+                    <div class="flex-row d-flex my-2">
+                        <h1>{{post.titulo}}</h1>
+
+                        <span class="d-flex justify-content-center align-items-center ms-5">
+
+                            <a href="#" class="text-decoration-none text-dark">
+                                <span class="ms-5" data-bs-toggle="tooltip" data-bs-placement="top"
+                                     data-bs-title="Compartilhar no Instagram">
+                                <i class="fa-brands fa-instagram-square fa-2xl"></i>
+                                </span>
+                            </a>
+
+                            <a href="#" class="text-decoration-none text-dark">
+                                <span class="ms-3" data-bs-toggle="tooltip" data-bs-placement="top"
+                                     data-bs-title="Compartilhar no Facebook">
+                                <i class="fa-brands fa-facebook-square fa-2xl"></i>
+                                </span>
+                            </a>
+
+                            <a href="#" class="text-decoration-none text-dark">
+                                <span class="ms-3" data-bs-toggle="tooltip" data-bs-placement="top"
+                                     data-bs-title="Compartilhar no Twitter">
+                                <i class="fa-brands fa-twitter-square fa-2xl"></i>
+                                </span>
+                            </a>
+
+                            <a href="#" class="text-decoration-none text-dark">
+                                <span class="ms-3" data-bs-toggle="tooltip" data-bs-placement="top"
+                                     data-bs-title="Compartilhar link">
+                                <i class="fa-solid fa-link fa-2xl"></i>
+                                </span>
+                            </a>
+
+                        </span>
+
+                    </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-12">
+                        <div class="d-flex flex-row align-items-center">
+                            <div class="rounded-circle border d-flex justify-content-center
+                                align-items-center bg-info avatar">
+
+                                <!-- Inserir imagem -->
+
+                            </div>
+
+                            <p class="mb-0">
+                                <span class="text-muted justify-content-center">
+                                    <span class="mx-2 h5">
+                                        {{post.autor}}
+                                    </span>
+
+                                    <span>
+                                        <i class="fa-solid fa-clock"></i>
+                                        <span>
+                                            30Min
+                                        </span>
+                                    </span>
+
+                                    <br>
+
+                                    <span class="mx-2">
+                                        <i class="fa-solid fa-tags"></i>
+                                    </span>
+
+                                    <span>
+                                        <a href="#" class="text-decoration-none text-muted"> #Básico </a>
+                                    </span>
+
+                                    <span>
+                                        <a href="#" class="text-decoration-none text-muted"> #Python </a>
+                                    </span>
+
+                                    <br>
+
+                                    <span class="mx-2">
+                                        {{post.subtitulo}}
+                                    </span>
+
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <hr class="my-5">
+
+                <article class="fs-4 px-lg-5 mx-lg-2">
+                    {{post.conteudo|safe}}
+                </article>
+
+                <hr class="my-5">
+
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="d-flex justify-content-md-start justify-content-sm-center">
+                                <div class="span me-3 btn">
+                                    <i class="fa-solid fa-heart fa-2xl"></i> Curtir
+                                </div>
+                                <div class="span me-3 btn">
+                                    <i class="fa-solid fa-comment fa-2xl"></i> Comentar
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
-    </header>
+    </div>
+</main>
 
-    <main class="bg-light">
-        <div class="container-fluid ">
-            <div class="row">
-                <div class="col-8">
-                    CONTEUDO
-                </div>
-            </div>
-        </div>
-    </main>
+{% include 'fragments/footer.html' %}
 
-    <footer class="bg-dark">
-        <div class="container-fluid ">
-            <div class="row">
-                <div class="col">
-                    FOOTER
-                </div>
-            </div>
-        </div>
-    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script></body>
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
 </html>
