--- a/autenticacao/templates/autenticacao/login.html
+++ b/autenticacao/templates/autenticacao/login.html
@@ -1,112 +1,125 @@
-<!DOCTYPE html>
+{% extends 'autenticacao_base.html' %}
 {% load static %}
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
-        <script src="https://kit.fontawesome.com/9d40ba4b44.js" crossorigin="anonymous"></script>
-        <script>
-            window.addEventListener('load', function(){
-              const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
-              const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
-            })
-        </script>
-        <title>Login</title>
-    </head>
-    <body>
+{% load socialaccount %}
 
-        <div class="container-fluid bg-dark mb-2">
-            <div class="row justify-content-center ">
-                <div class="col-xl-8">
-                    <header class="bg-dark my-2">
-                        {% include 'fragments/navbar.html' %}
-                    </header>
-                </div>
-            </div>
-        </div>
+{% block title %} Tela de Login {% endblock %}
 
-        <main class="">
-            <div class="container-fluid">
+{% block content %}
+<main class="bg-light">
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-xl-8">
                 <div class="row justify-content-center">
-                    <div class="col-xl-8">
-                        <div class="row justify-content-center">
-                            <div class="col-md-6">
+                    <div class="col-md-6">
 
-                                <div class="card-body my-5 border rounded bg-light p-3">
-                                    <div class="m-3">
-                                        <span class="fw-bold fs-2 text-primary">Login</span>
-                                    </div>
+                        {% if not user.is_authenticated %}
 
-                                    <form>
-                                        <p class="form-label mt-3 ">Usuário ou E-mail</p>
-                                        <div class="form-floating mb-3">
-                                            <input type="email" class="form-control" id="idEmailLogin"
-                                                   placeholder="name@example.com">
-                                            <label for="idEmailLogin">Digite aqui seu e-mail</label>
-                                        </div>
+                        <div class="card-body my-5 border rounded bg-light p-3">
+                            <div class="m-3">
+                                <span class="fw-bold fs-2 text-primary">Login</span>
+                            </div>
+                            {% if messages %}
+                            {% for message in messages %}
+                            {% if message.tags %}
+                            <div class="alert alert-danger text-center" role="alert">
+                                {{ message }}
+                            </div>
+                            {% endif %}
+                            {% endfor %}
+                            {% endif %}
+                            <form method="POST" action="{% url 'login' %}">
+                                {% csrf_token %}
+                                <p class="form-label mt-3 ">Usuário ou E-mail</p>
+                                <div class="form-floating mb-3">
+                                    <input type="text" class="form-control" id="username"
+                                           placeholder="name@example.com" value="{{username}}" name="username">
+                                    <label for="username">Digite aqui seu e-mail</label>
+                                </div>
 
-                                        <p class="form-label mt-3">Senha</p>
-                                        <div class="form-floating mb-3">
-                                            <input type="password" class="form-control" id="idSenhaLogin"
-                                                   placeholder="Password">
-                                            <label for="idSenhaLogin">Digite aqui sua senha</label>
-                                        </div>
+                                <p class="form-label mt-3">Senha</p>
+                                <div class="form-floating mb-3">
+                                    <input type="password" class="form-control" id="password"
+                                           placeholder="Password" value="{{password}}" name="password">
+                                    <label for="password">Digite aqui sua senha</label>
+                                </div>
 
-                                        <div class="my-3 text-end">
-                                            <a class="btn" href="#">
+                                <div class="my-3 text-end">
+                                    <a class="btn" href="{% url 'password_reset' %}">
                                             <span class="text-success fw-bold">
                                                 Esqueceu sua senha?
                                             </span>
-                                            </a>
-                                        </div>
-
-                                        <div class="d-grid mt-2">
-                                            <button class="btn btn-success" type="button">
-                                                Entrar
-                                            </button>
-                                        </div>
-
-                                        <div class="d-grid mt-2">
-                                            <button class="btn btn-dark" type="button">
-                                                <i class="fa-brands fa-x-twitter"></i>
-                                            </button>
-                                        </div>
-
-                                        <div class="d-grid mt-2">
-                                            <button class="btn btn-danger" type="button">
-                                                <i class="fa-brands fa-google"></i>
-                                            </button>
-                                        </div>
-
-                                        <div class="d-grid mt-2">
-                                            <button class="btn btn-primary" type="button">
-                                                <i class="fa-brands fa-facebook"></i>
-                                            </button>
-                                        </div>
-
-                                        <div class="my-2 text-center">
-                                            <a href="#" class="btn text-secondary fw-bold">
-                                                Criar conta
-                                            </a>
-                                        </div>
-
-                                    </form>
+                                    </a>
                                 </div>
 
-                            </div>
+                                <div class="d-grid mt-2">
+                                    <button class="btn btn-success" type="submit">
+                                        Entrar
+                                    </button>
+                                </div>
+
+                                <div class="d-grid mt-2">
+                                    <a href="{% provider_login_url 'github' %}" class="btn btn-dark" type="button">
+                                        <i class="fa-brands fa-github"></i>
+                                    </a>
+                                </div>
+
+                                <div class="d-grid mt-2">
+                                    <a href="{% provider_login_url 'google' %}" class="btn btn-danger" type="button">
+                                        <i class="fa-brands fa-google"></i>
+                                    </a>
+                                </div>
+
+                                <div class="d-grid mt-2">
+                                    <button class="btn btn-primary" type="button">
+                                        <i class="fa-brands fa-facebook"></i>
+                                    </button>
+                                </div>
+
+                                <div class="my-2 text-center">
+                                    <a href="{% url 'criar_conta' %}" class="btn text-secondary fw-bold">
+                                        Criar conta
+                                    </a>
+                                </div>
+
+                            </form>
                         </div>
+
+                        {% else %}
+
+                        <div class="card my-5">
+                            <div class="card-header p-5">
+                                <h3 class="text-success"> {{ user.username }}, você já está logado no sistema. </h3>
+                                <p class="h5 text-center text-primary">Deseja realmente sair?</p>
+                            </div>
+
+                            <div class="card-body d-flex justify-content-center">
+                                <button type="button" class="btn btn-danger me-2"
+                                        hx-get="autenticacao/processa_logout"
+                                        hx-trigger="click"
+                                        hx-target="body"
+                                >
+                                    Sim
+                                </button>
+
+                                <button type="button" class="btn btn-primary me-2"
+                                        hx-get="autenticacao/processa_redirect_home"
+                                        hx-trigger="click"
+                                        hx-target="body"
+                                        hx-swap="outerHTML"
+                                        hx-push-url="true"
+                                >
+                                    Não
+                                </button>
+                            </div>
+
+                        </div>
+
+                        {% endif %}
+
                     </div>
                 </div>
             </div>
-        </main>
-
-        {% include 'fragments/footer.html' with var_position='position-sticky' %}
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-    </body>
-</html>
+        </div>
+    </div>
+</main>
+{% endblock %}
