--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -1,85 +1,16 @@
-<!DOCTYPE html>
+{% extends 'blog_base.html' %}
 {% load static %}
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
-        <script src="https://kit.fontawesome.com/9d40ba4b44.js" crossorigin="anonymous"></script>
-        <script>
-            window.addEventListener('load', function(){
-              const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
-              const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
-            })
-        </script>
-        <title>Blog</title>
-    </head>
-    <body>
+{% block title %} Postagens {% endblock %}
+{% block content %}
+    <div class="col-xl-8">
+    {% for post in posts %}
+        {% include "fragments/card_base.html" with post=post tamanho="mx-5 px-5 py-2" imagem="img-350-list" %}
+        <div class="my-3"></div>
+    {% endfor %}
+    </div>
+{% endblock %}
 
-        <div class="container-fluid bg-dark mb-2">
-            <div class="row justify-content-center ">
-                <div class="col-xl-8">
-                    <header class="bg-dark my-2">
-                        {% include 'fragments/navbar.html' %}
-                        {% include 'fragments/carousel.html' %}
-                    </header>
-                </div>
-            </div>
-        </div>
 
-        <main class="bg-light">
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col-xl-7">
 
-                        {% for post in posts %}
-                            <div class="card mx-5 px-5 py-2">
-                            <a href="{% url 'detalhe_post' post.id %}"><img src="{{ post.imagem_capa.url }}"
-                                                                            class="card-img-top img-350-list"
-                                                                            alt="Imagem de Capa"></a>
-                            <div class="card-body pb-3">
 
-                                <a href="{% url 'detalhe_post' post.id %}" class="text-decoration-none text-dark"><h5 class="card-title">{{ post.titulo }}</h5>
-                                </a>
 
-                                <p class="card-text">{{ post.resumo|safe }}...</p>
-
-                                <p class="card-text text-end">
-                                    <small class="text-muted"> Publicado em {{ post.data_publicacao }} </small>
-                                </p>
-
-                                <div class="row">
-                                    <div class="col-12">
-                                        <div class="d-flex justify-content-center">
-                                            <div class="span me-3 btn">
-                                                <i class="fa-solid fa-heart"></i> Curtir
-                                            </div>
-                                            <div class="span me-3 btn">
-                                                <i class="fa-solid fa-comment"></i> Comentar
-                                            </div>
-                                            <div class="span me-3 btn">
-                                                <i class="fa-solid fa-share"></i> Compartilhar
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-
-                        <div class="my-3"></div>
-
-                        {% endfor %}
-
-                    </div>
-                </div>
-            </div>
-        </main>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-    </body>
-</html>
