--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,168 +1,46 @@
-<!DOCTYPE html>
+{% extends 'blog_base.html' %}
 {% load static %}
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
-    <script src="https://kit.fontawesome.com/9d40ba4b44.js" crossorigin="anonymous"></script>
-    <script>
-        window.addEventListener('load', function(){
-          const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
-          const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
-        })
-    </script>
-    <title>Página Inicial</title>
-</head>
-<body>
 
+{% block title %} Academia Python {% endblock %}
 
-<div class="container-fluid bg-dark mb-2">
-    <div class="row justify-content-center ">
-        <div class="col-xl-8">
-            <header class="bg-dark my-2">
+{% block content %}
+    {% if messages %}
+        {% for message in messages %}
+            {% if message.tags %}
+                <div class="alert alert-success text-center" role="alert">
+                    {{ message }}
+                </div>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+    <div class="col-xl-8">
+    <div class="row">
+        <div class="col-lg-8 d-flex">
+            {% include "fragments/card_base.html" with post=posts.0 tamanho="vh-75 vw-100" %}
+        </div>
 
-                {% include 'fragments/navbar.html' %}
-
-                {% include 'fragments/carousel.html' %}
-
-            </header>
+        <div class="col-lg-4 d-none d-lg-flex" hx-get="quiz/" hx-trigger="load">
+            {% include 'quiz/quiz.html' %}
         </div>
     </div>
-</div>
 
-<main class="bg-light">
-    <div class="container-fluid">
-        <div class="row justify-content-center">
-            <div class="col-xl-8">
+    <hr class="my-4">
 
-                <div class="row">
-                    <div class="col-lg-8 d-flex">
-                        <div class="card vh-75 vw-100">
-                            <a href="{% url 'detalhe_post' posts.0.id %}" ><img src="{{ posts.0.imagem_capa.url }}"
-                                                                               class="card-img-top"
-                                                                               alt="Imagem do Card"></a>
-
-                            <div class="card-body pb-4">
-                                <a href="{% url 'detalhe_post' posts.0.id %}" class="text-decoration-none text-dark">
-                                    <h4 class="card-title">{{ posts.0.titulo }}</h4>
-                                </a>
-                                <p class="card-text">{{ posts.0.resumo|safe }}</p>
-
-                                <p class="card-text text-end">
-                                    <small class="text-muted"> Publicado em {{ posts.0.data_publicacao }} </small>
-                                </p>
-
-                                <div class="row">
-                                    <div class="col-12">
-                                        <div class="d-flex justify-content-center">
-                                            <div class="span me-3 btn">
-                                                <i class="fa-solid fa-heart"></i> Curtir
-                                            </div>
-                                            <div class="span me-3 btn">
-                                                <i class="fa-solid fa-comment"></i> Comentar
-                                            </div>
-                                            <div class="span me-3 btn">
-                                                <i class="fa-solid fa-share"></i> Compartilhar
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 d-none d-lg-flex">
-
-                        <div class="card vh-75 vw-100">
-
-                            <img src="{% static 'blog/Eygon.jpg' %}" class="card-img-top" alt="Eygon">
-
-                            <div class="card-body">
-
-                                <div class="form-check">
-
-                                    <ul class="list-group list-group-flush">
-                                        {% for i in 'ABCDE' %}
-                                        <div class="list-group-item">
-                                            <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                                   id="flexRadioDefault1">
-
-                                            <label class="form-check-label" for="flexRadioDefault1">
-                                                Alternativa {{i}}
-                                            </label>
-                                        </div>
-                                        {% endfor %}
-                                    </ul>
-
-                                    <a href="#" class="mt-2 d-grid btn btn-success">Responder</a>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <hr class="my-4">
-
-                <div class="container bg-dark py-3 d-flex justify-content-center rounded">
-                    <span>
-                        <h1 class="text-info">Posts recentes</h1>
-                    </span>
-                </div>
-
-                <hr class="my-4">
-                <div class="row row-cols-1 row-cols-md-2 g-4">
-                    {% for post in posts|slice:"1:5" %}
-                    <div class="col d-flex">
-                        <div class="card vh-75 vw-100">
-                            <a href="{% url 'detalhe_post' post.id %}"><img src="{{ post.imagem_capa.url }}"
-                                                                            class="card-img-top img-350"
-                                                                            alt="Imagem de Capa"></a>
-                            <div class="card-body pb-3">
-
-                                <a href="{% url 'detalhe_post' post.id %}" class="text-decoration-none text-dark"><h5 class="card-title">{{ post.titulo }}</h5>
-                                </a>
-
-                                <p class="card-text">{{ post.resumo|slice:":250"|safe }}...</p>
-
-                                <div class="row">
-                                    <div class="col-12">
-                                        <div class="d-flex justify-content-center">
-                                            <div class="span me-3 btn">
-                                                <i class="fa-solid fa-heart"></i> Curtir
-                                            </div>
-                                            <div class="span me-3 btn">
-                                                <i class="fa-solid fa-comment"></i> Comentar
-                                            </div>
-                                            <div class="span me-3 btn">
-                                                <i class="fa-solid fa-share"></i> Compartilhar
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-
-                </div>
-
-            </div>
-        </div>
+    <div class="container bg-dark py-3 d-flex justify-content-center rounded">
+        <h1 class="text-info">Posts recentes</h1>
     </div>
-</main>
 
-{% include 'fragments/footer.html' %}
+    <hr class="my-4">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+        {% for post in posts|slice:"1:5" %}
+        <div class="col d-flex">
+                {% include "fragments/card_base.html" with post=post tamanho="vh-75 vw-100" imagem="img-350" %}
+        </div>
+        {% endfor %}
+    </div>
+    </div>
+{% endblock %}
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+{% block footer %}
+    {% include 'fragments/footer.html' %}
+{% endblock %}
