--- a/contato/templates/contato/contato.html
+++ b/contato/templates/contato/contato.html
@@ -1,73 +1,34 @@
-<!DOCTYPE html>
+{% extends "contato_base.html" %}
+
 {% load static %}
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
-        <script src="https://kit.fontawesome.com/9d40ba4b44.js" crossorigin="anonymous"></script>
-        <script>
-            window.addEventListener('load', function(){
-              const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
-              const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
-            })
-        </script>
-        <title>Contato</title>
-    </head>
-    <body>
 
-        <div class="container-fluid bg-dark mb-2">
-            <div class="row justify-content-center ">
-                <div class="col-xl-8">
-                    <header class="bg-dark my-2">
-                        {% include 'fragments/navbar.html' %}
-                    </header>
-                </div>
+{% block title %} Contato {% endblock %}
+
+{% block content %}
+<div class="col-xl-5 col-md-6">
+    <form method="POST" action="{% url 'mensagem' %}">
+        {% csrf_token %}
+        <div class="card border-0 px-sm-0 p-md-5 mt-3">
+
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.tags %}
+                        <div class="alert alert-success text-center" role="alert">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+
+            <div class="card-header bg-white border-0">
+                <h1 class="text-success text-center">Contato</h1>
             </div>
+            {{ form }}
+            <div class="card-footer p-0 pt-3 bg-white border-0">
+                <button type="submit" class="btn btn-success col-12">Enviar mensagem</button>
+            </div>
+
         </div>
-
-
-        <main class="bg-light">
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col-xl-5 col-md-6">
-
-                        <form method="POST" action="{% url 'mensagem' %}">
-                            {% csrf_token %}
-                            <div class="card border-0 px-sm-0 p-md-5 mt-3">
-
-                                {% if messages %}
-                                    {% for message in messages %}
-                                        {% if message.tags %}
-                                            <div class="alert alert-success text-center" role="alert">
-                                                {{ message }}
-                                            </div>
-                                        {% endif %}
-                                    {% endfor %}
-                                {% endif %}
-
-                                <div class="card-header bg-white border-0">
-                                    <h1 class="text-success text-center">Contato</h1>
-                                </div>
-                                {{ form }}
-                                <div class="card-footer p-0 pt-3 bg-white border-0">
-                                    <button type="submit" class="btn btn-success col-12">Enviar mensagem</button>
-                                </div>
-
-                            </div>
-                        </form>
-
-                    </div>
-                </div>
-            </div>
-        </main>
-
-        {% include 'fragments/footer.html' %}
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-    </body>
-</html>
+    </form>
+</div>
+{% endblock %}
