--- a/cursos/templates/cursos/cursos.html
+++ b/cursos/templates/cursos/cursos.html
@@ -1,48 +1,11 @@
-<!DOCTYPE html>
+{% extends 'cursos_base.html' %}
 {% load static %}
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
-        <script src="https://kit.fontawesome.com/9d40ba4b44.js" crossorigin="anonymous"></script>
-        <script>
-            window.addEventListener('load', function(){
-              const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
-              const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
-            })
-        </script>
-        <title>Cursos</title>
-    </head>
-    <body>
 
-        <div class="container-fluid bg-dark mb-2">
-            <div class="row justify-content-center ">
-                <div class="col-xl-8">
-                    <header class="bg-dark my-2">
-                        {% include 'fragments/navbar.html' %}
-                    </header>
-                </div>
-            </div>
-        </div>
+{% block title %} Cursos {% endblock %}
 
-        <h1>Cursos</h1>
+{% block content %}
 
-        <main class="bg-light">
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col-xl-8">
-                    </div>
-                </div>
-            </div>
-        </main>
-
-        {% include 'fragments/footer.html' with var_position='fixed-bottom' %}
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-    </body>
-</html>
+<div class="col-xl-8">
+    <h1>Cursos</h1>
+</div>
+{% endblock %}
